// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
<div>
  <span
    class="absolute flex items-center justify-center w-5 h-5 align-middle border-2 border-transparent rounded-full style__Wrapper-ik37et-0 chXxec bg-theme-background undefined"
  >
    <span />
  </span>
</div>
`;

exports[`Badge should render with icon 1`] = `
<div>
  <span
    class="absolute flex items-center justify-center w-5 h-5 align-middle border-2 border-transparent rounded-full style__Wrapper-ik37et-0 chXxec bg-theme-background undefined"
  >
    <div
      class="sc-AxjAm HWmvM"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;
